--- a/spiritual.html
+++ b/spiritual.html
@@ -2,25 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Spiritual Tattoos</title>
+    <title>PAGE TITLE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Main Styles -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google Font (if used on homepage) -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Back Button -->
-    <div style="text-align:center; margin-top:30px;">
-        <a href="index.html" style="color:white; text-decoration:none; font-size:18px;">
-            ← Back to Home
-        </a>
-    </div>
+    <!-- Header -->
+    <header class="header">
+        <div class="logo">C&M Tailor Club</div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="index.html#gallery">Gallery</a>
+            <a href="index.html#contact">Contact</a>
+        </nav>
+    </header>
 
-    <!-- Page Title -->
-    <h1 style="text-align:center; margin:30px 0;">Spiritual Tattoos</h1>
+    <!-- Page Section -->
+    <section class="page-section">
+        <h1 class="page-title">PAGE TITLE</h1>
 
-    <!-- Gallery -->
-    <div class="gallery">
-        <img src="images/spiritual/1000003600.jpg" alt="Spiritual Tattoo">
+        <div class="gallery-grid">
+           <img src="images/spiritual/1000003600.jpg" alt="Spiritual Tattoo">
         <img src="images/spiritual/1000003603.jpg" alt="Spiritual Tattoo">
         <img src="images/spiritual/1000003606.jpg" alt="Spiritual Tattoo">
         <img src="images/spiritual/1000003609.jpg" alt="Spiritual Tattoo">
@@ -32,7 +40,13 @@
         <img src="images/spiritual/1000003681.jpg" alt="Spiritual Tattoo">
         <img src="images/spiritual/1000003684.jpg" alt="Spiritual Tattoo">
         <img src="images/spiritual/1000003699.jpg" alt="Spiritual Tattoo">
-    </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>© 2026 C&M Tailor Club. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
