--- a/custom.html
+++ b/custom.html
@@ -2,47 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PAGE TITLE</title>
+    <title>Realism | Miguel-Ink</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Main Styles -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Google Font (if used on homepage) -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Header -->
-    <header class="header">
-        <div class="logo">C&M Tailor Club</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="index.html#gallery">Gallery</a>
-            <a href="index.html#contact">Contact</a>
-        </nav>
-    </header>
+<!-- NAV -->
+<nav>
+    <div class="nav-left">MIGUEL-INK</div>
+    <div class="nav-right">
+        <a href="index.html">Home</a>
+        <a href="index.html#work">Work</a>
+        <a href="index.html#contact">Contact</a>
+    </div>
+</nav>
 
-    <!-- Page Section -->
-    <section class="page-section">
-        <h1 class="page-title">PAGE TITLE</h1>
+<!-- PAGE CONTENT -->
+<section class="page-section">
+    <h1 class="page-title">REALISM</h1>
 
-        <div class="gallery-grid">
-            <img src="images/custom/1000003591.jpg" alt="Custom Tattoo">
-        <img src="images/custom/1000003630.jpg" alt="Custom Tattoo">
+    <div class="gallery-grid">
+       <img src="images/custom/1000003630.jpg" alt="Custom Tattoo">
         <img src="images/custom/1000003645.jpg" alt="Custom Tattoo">
         <img src="images/custom/1000003648.jpg" alt="Custom Tattoo">
         <img src="images/custom/1000003690.jpg" alt="Custom Tattoo">
         <img src="images/custom/1000003693.jpg" alt="Custom Tattoo">
         <img src="images/custom/1000003705.jpg" alt="Custom Tattoo">
         <img src="images/custom/1000003708.jpg" alt="Custom Tattoo">
-        </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <p>© 2026 C&M Tailor Club. All rights reserved.</p>
-    </footer>
+<footer>
+    © 2026 MIGUEL-INK
+</footer>
 
 </body>
 </html>
