--- a/index.html
+++ b/index.html
@@ -18,425 +18,248 @@ gtag('config', 'G-L1C4741DCZ');
 <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&display=swap" rel="stylesheet">
 
 <style>
-/* =========================
-   RESET
-========================= */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-/* =========================
-   GLOBAL
-========================= */
+/* RESET */
+* { margin:0; padding:0; box-sizing:border-box; }
+
+/* GLOBAL */
 body {
-  background: #000;
-  color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.6;
+  background:#000;
+  color:#fff;
+  font-family:Arial, Helvetica, sans-serif;
+  line-height:1.6;
 }
 
-a {
-  text-decoration: none;
-  color: white;
-  transition: 0.3s;
-}
+a { text-decoration:none; color:#fff; transition:0.3s; }
+a:hover { color:#ff0000; }
 
-a:hover {
-  color: #ff0000;
-}
-
-/* =========================
-   NAVIGATION
-========================= */
+/* NAV */
 nav {
-  position: sticky;
-  top: 0;
-  background: #000;
-  padding: 20px 8%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #111;
-  z-index: 1000;
+  position:sticky;
+  top:0;
+  background:#000;
+  padding:20px 8%;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  border-bottom:1px solid #111;
+  z-index:1000;
 }
 
-nav img {
-  height: 95px;
-}
+nav img { height:95px; }
 
 nav ul {
-  list-style: none;
-  display: flex;
-  gap: 40px;
+  list-style:none;
+  display:flex;
+  gap:40px;
 }
 
 nav ul li a {
-  font-weight: bold;
-  letter-spacing: 1px;
-  text-transform: uppercase;
+  font-weight:bold;
+  letter-spacing:1px;
+  text-transform:uppercase;
 }
 
-nav ul li a:hover {
-  color: #ff0000;
-}
-
-/* =========================
-   HERO SECTION
-========================= */
+/* HERO */
 .hero {
-  padding: 160px 8%;
-  border-bottom: 1px solid #111;
+  position:relative;
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  padding:0 8%;
+  overflow:hidden;
 }
 
 .hero h1 {
-  font-family: 'Cinzel', serif;
-  font-size: 90px;
-  text-transform: uppercase;
-  letter-spacing: 3px;
+  font-family:'Cinzel', serif;
+  font-size:90px;
+  letter-spacing:3px;
+  text-transform:uppercase;
+  z-index:2;
 }
 
 .hero p {
-  margin-top: 20px;
-  color: #aaa;
-  font-size: 18px;
+  margin-top:20px;
+  color:#aaa;
+  font-size:18px;
+  z-index:2;
 }
 
-/* =========================
-   BUTTONS
-========================= */
-.btn {
-  display: inline-block;
-  margin-top: 30px;
-  padding: 14px 40px;
-  border: 1px solid #ff0000;
-  color: #ff0000;
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 2px;
-  transition: 0.3s;
+.hero button {
+  margin-top:30px;
+  padding:14px 40px;
+  background:transparent;
+  border:1px solid #ff0000;
+  color:#ff0000;
+  font-weight:bold;
+  letter-spacing:2px;
+  text-transform:uppercase;
+  cursor:pointer;
+  transition:0.3s;
+  z-index:2;
 }
 
-.btn:hover {
-  background: #ff0000;
-  color: #000;
-  box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
+.hero button:hover {
+  background:#ff0000;
+  color:#000;
+  box-shadow:0 0 25px rgba(255,0,0,0.8);
 }
 
-/* =========================
-   GALLERY
-========================= */
-.gallery {
-  padding: 120px 8%;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 30px;
+/* HERO SLIDESHOW */
+.slideshow {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:1;
 }
 
-.gallery img {
-  width: 100%;
-  border-radius: 10px;
-  transition: 0.4s ease;
-  border: 1px solid #111;
+.slideshow img {
+  position:absolute;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  opacity:0;
+  animation:fade 40s infinite;
 }
 
-.gallery img:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 30px rgba(255, 0, 0, 0.7);
-  border: 1px solid #ff0000;
+.slideshow img:nth-child(1){animation-delay:0s;}
+.slideshow img:nth-child(2){animation-delay:4s;}
+.slideshow img:nth-child(3){animation-delay:8s;}
+.slideshow img:nth-child(4){animation-delay:12s;}
+.slideshow img:nth-child(5){animation-delay:16s;}
+.slideshow img:nth-child(6){animation-delay:20s;}
+.slideshow img:nth-child(7){animation-delay:24s;}
+.slideshow img:nth-child(8){animation-delay:28s;}
+.slideshow img:nth-child(9){animation-delay:32s;}
+.slideshow img:nth-child(10){animation-delay:36s;}
+
+@keyframes fade {
+  0% { opacity:0; }
+  5% { opacity:0.15; }
+  15% { opacity:0.15; }
+  20% { opacity:0; }
+  100% { opacity:0; }
 }
 
-/* =========================
-   SECTIONS
-========================= */
+/* SECTIONS */
 section {
-  padding: 120px 8%;
-  border-bottom: 1px solid #111;
+  padding:120px 8%;
+  border-bottom:1px solid #111;
 }
 
 h2 {
-  font-family: 'Cinzel', serif;
-  font-size: 50px;
-  margin-bottom: 40px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+  font-family:'Cinzel', serif;
+  font-size:50px;
+  margin-bottom:40px;
+  text-transform:uppercase;
+  letter-spacing:2px;
 }
 
-/* =========================
-   ABOUT
-========================= */
-.about p {
-  max-width: 800px;
-  color: #bbb;
+/* WORK GRID */
+.work-grid {
+  display:grid;
+  grid-template-columns:repeat(auto-fit, minmax(280px,1fr));
+  gap:40px;
 }
 
-/* =========================
-   BOOKING SECTION
-========================= */
-.book {
-  text-align: center;
+.work-box img {
+  width:100%;
+  border-radius:10px;
+  transition:0.4s;
+  border:1px solid #111;
 }
 
-.book p {
-  color: #bbb;
+.work-box img:hover {
+  transform:scale(1.05);
+  box-shadow:0 0 30px rgba(255,0,0,0.7);
+  border:1px solid #ff0000;
 }
 
-/* =========================
-   FOOTER
-========================= */
+.work-box h3 {
+  margin-top:15px;
+  text-align:center;
+  font-family:'Cinzel', serif;
+  letter-spacing:2px;
+  text-transform:uppercase;
+}
+
+/* BOOKING FORM */
+.booking-box input,
+.booking-box textarea {
+  width:100%;
+  padding:14px;
+  margin-bottom:20px;
+  background:#111;
+  border:1px solid #222;
+  color:#fff;
+}
+
+.booking-box textarea { min-height:120px; }
+
+.booking-box button {
+  width:100%;
+  padding:14px;
+  background:transparent;
+  border:1px solid #ff0000;
+  color:#ff0000;
+  font-weight:bold;
+  letter-spacing:2px;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+.booking-box button:hover {
+  background:#ff0000;
+  color:#000;
+  box-shadow:0 0 25px rgba(255,0,0,0.8);
+}
+
+/* FLOATING GLOW BUTTONS */
+.floating-contact {
+  position:fixed;
+  bottom:40px;
+  right:30px;
+  display:flex;
+  flex-direction:column;
+  gap:15px;
+  z-index:999;
+}
+
+.whatsapp-btn,
+.line-btn {
+  background:#000;
+  border:1px solid #ff0000;
+  color:#ff0000;
+  padding:12px 22px;
+  text-transform:uppercase;
+  font-weight:bold;
+  letter-spacing:1px;
+  transition:0.3s;
+}
+
+.whatsapp-btn:hover,
+.line-btn:hover {
+  background:#ff0000;
+  color:#000;
+  box-shadow:0 0 30px rgba(255,0,0,0.9);
+}
+
+/* FOOTER */
 footer {
-  padding: 50px 8%;
-  border-top: 1px solid #111;
-  text-align: center;
-  color: #777;
-  font-size: 14px;
+  padding:50px 8%;
+  border-top:1px solid #111;
+  text-align:center;
+  color:#777;
+  font-size:14px;
 }
 
-/* =========================
-   RESPONSIVE
-========================= */
-@media (max-width: 768px) {
-  .hero h1 {
-    font-size: 50px;
-  }
-
-  nav ul {
-    gap: 20px;
-  }
-
-  h2 {
-    font-size: 36px;
-  }
+@media (max-width:768px){
+  .hero h1 { font-size:50px; }
+  h2 { font-size:36px; }
 }
+
 </style>
-
 </head>
-
-<body>
-
-<nav>
-  <img src="logo.png" alt="Miguel Art Tattoo Logo">
-  <ul>
-    <li><a href="#work">Work</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#book">Book</a></li>
-  </ul>
-</nav>
-
-<div class="hero">
-  <div class="slideshow">
-    <img src="images/tattoo1.jpg">
-    <img src="images/tattoo2.jpg">
-    <img src="images/tattoo3.jpg">
-    <img src="images/tattoo4.jpg">
-    <img src="images/tattoo5.jpg">
-    <img src="images/tattoo6.jpg">
-    <img src="images/tattoo7.jpg">
-    <img src="images/tattoo8.jpg">
-    <img src="images/tattoo9.jpg">
-    <img src="images/tattoo10.jpg">
-  </div>
-
-  <h1>Bold. Clean. <span>Permanent.</span></h1>
-  <p>Custom tattoos crafted with precision and intention.</p>
-  <button onclick="document.getElementById('book').scrollIntoView()">BOOK APPOINTMENT</button>
-</div>
-
-<section id="work" class="work-section">
-  <div class="work-grid">
-
-    <div class="work-box">
-      <a href="minimalist.html">
-        <img src="images/minimalist.jpeg" alt="Minimalist Tattoo">
-        <h3>Minimalist</h3>
-      </a>
-    </div>
-
-    <div class="work-box">
-      <a href="custom.html">
-        <img src="images/custom.jpeg" alt="Custom Tattoo">
-        <h3>Custom</h3>
-      </a>
-    </div>
-
-    <div class="work-box">
-      <a href="spiritual.html">
-        <img src="images/spiritual.jpg" alt="Spiritual Tattoo">
-        <h3>Spiritual</h3>
-      </a>
-    </div>
-
-    <div class="work-box">
-      <a href="realism.html">
-        <img src="images/realism.jpg" alt="Realism Tattoo">
-        <h3>Realism</h3>
-      </a>
-    </div>
-
-  </div>
-</section>
-
-<section id="about">
-  <h2>About</h2>
-
-  <p>
-    Located near Anusarn Market in Chiang Mai, Thailand, Miguel Art Tattoo is a professional studio welcoming both local clients and international visitors.
-    The studio specialises in clean, detailed tattoo work with a strong focus on precision and long-lasting quality.
-  </p>
-
-  <p>
-    From fine line and blackwork to fully custom designs, each piece is developed through careful consultation to ensure balance, placement, and meaning.
-    Every tattoo is crafted to be bold, clear, and built to age well.
-  </p>
-
-  <p>
-    Walk-ins are welcome, and appointments are available for larger or custom projects.
-    Strict hygiene standards and a professional studio environment ensure every client feels confident and comfortable from start to finish.
-  </p>
-</section>
-
-<section id="location">
-  <h2>Location</h2>
-
-  <p>
-    Located near Anusarn Market in Chiang Mai, Thailand.
-  </p>
-
-  <div style="margin-top:40px;">
-    <iframe 
-      src="https://www.google.com/maps?q=18.7827,99.0014&hl=en&z=17&output=embed"
-      width="100%" 
-      height="350" 
-      style="border:0;" 
-      allowfullscreen 
-      loading="lazy">
-    </iframe>
-
-    <div style="margin-top:30px;">
-      <a 
-        href="https://www.google.com/maps/dir/?api=1&destination=18.7827,99.0014" 
-        target="_blank"
-        style="display:inline-block;background:#ff0000;color:#fff;padding:14px 28px;text-decoration:none;font-weight:bold;letter-spacing:1px;transition:0.3s;"
-      >
-        GET DIRECTIONS
-      </a>
-    </div>
-  </div>
-</section>
-
-<section id="book">
-  <h2>Book an Appointment</h2>
-
-  <div class="booking-box">
-    <form id="booking-form" action="https://formspree.io/f/mbdagyjw" method="POST">
-      <input type="text" name="full_name" placeholder="Full Name" required>
-      <input type="email" name="email" placeholder="Email Address" required>
-      <input type="tel" id="mobile" name="mobile" placeholder="Mobile Number" required>
-      <input type="text" name="idea" placeholder="Tattoo Idea / Placement">
-      <textarea name="description" placeholder="Describe your idea"></textarea>
-      <button type="submit">Submit Booking Request</button>
-    </form>
-
-    <p id="form-message" style="margin-top:20px; display:none; color:#ff0000; font-weight:bold; opacity:0;">
-      Thank you. Your booking request has been sent. We will contact you soon.
-    </p>
-  </div>
-</section>
-
-<!-- FLOATING CONTACT BUTTONS -->
-<div class="floating-contact">
-
-  <a href="https://wa.me/YOURNUMBER"
-     target="_blank"
-     class="whatsapp-btn"
-     onclick="trackContact('whatsapp')">
-     WhatsApp
-  </a>
-
-  <a href="YOUR_LINE_LINK"
-     target="_blank"
-     class="line-btn"
-     onclick="trackContact('line')">
-     LINE
-  </a>
-
-</div>
-
-<script>
-const form = document.getElementById("booking-form");
-const message = document.getElementById("form-message");
-const button = form.querySelector("button");
-const mobileInput = document.getElementById("mobile");
-
-/* FORM SUBMISSION */
-form.addEventListener("submit", async function(event) {
-  event.preventDefault();
-
-  button.disabled = true;
-  button.innerText = "Sending...";
-
-  const data = new FormData(form);
-
-  try {
-    const response = await fetch(form.action, {
-      method: form.method,
-      body: data,
-      headers: { 'Accept': 'application/json' }
-    });
-
-    if (response.ok) {
-      form.reset();
-      message.style.display = "block";
-      setTimeout(() => {
-        message.style.transition = "opacity 0.6s ease";
-        message.style.opacity = "1";
-      }, 10);
-
-      button.innerText = "Sent ✓";
-    } else {
-      alert("There was a problem submitting the form.");
-      button.disabled = false;
-      button.innerText = "Submit Booking Request";
-    }
-  } catch (error) {
-    alert("Network error. Please try again.");
-    button.disabled = false;
-    button.innerText = "Submit Booking Request";
-  }
-});
-
-/* MOBILE FORMAT */
-mobileInput.addEventListener("input", function(e) {
-  let value = e.target.value.replace(/[^\d+]/g, "");
-
-  if (value.indexOf("+") > 0) {
-    value = value.replace(/\+/g, "");
-  }
-
-  let prefix = "";
-  if (value.startsWith("+")) {
-    prefix = "+";
-    value = value.substring(1);
-  }
-
-  value = value.substring(0, 15);
-
-  let formatted = value.match(/.{1,4}/g);
-  formatted = formatted ? formatted.join(" ") : value;
-
-  e.target.value = prefix + formatted;
-});
-
-function trackContact(platform) {
-  if (typeof gtag !== "undefined") {
-    gtag('event', 'contact_click', {
-      event_category: 'engagement',
-      event_label: platform
-    });
-  }
-}
-</script>
-
-</body>
-</html>
