--- a/index.html
+++ b/index.html
@@ -98,27 +98,26 @@ gtag('config', 'G-L1C4741DCZ');
 </section>
 
 <!-- FIND US -->
-<section id="location" class="location">
-  <h2>Find Us</h2>
-  <p>Located near Anusarn Market, Chiang Mai, Thailand.</p>
-</section>
-
-<div class="map-full">
-  <iframe 
-    src="https://www.google.com/maps?q=18.7827,99.0014&hl=en&z=17&output=embed"
-    loading="lazy">
-  </iframe>
-
-  <div class="directions-wrap">
-    <a 
-      href="https://www.google.com/maps/dir/?api=1&destination=18.7827,99.0014"
-      target="_blank"
-      class="directions-btn">
-      Get Directions
-    </a>
+<section id="location">
+  <div class="location-content">
+    <h2>Find Us</h2>
+    <p>Located near Anusarn Market, Chiang Mai, Thailand.</p>
   </div>
 </section>
 
+<div class="map-container">
+  <iframe
+    src="https://www.google.com/maps?q=18.7827,99.0014&hl=en&z=17&output=embed"
+    loading="lazy">
+  </iframe>
+</div>
+
+<div class="directions-wrap">
+  <a href="https://www.google.com/maps/dir/?api=1&destination=18.7827,99.0014" class="directions-btn" target="_blank">
+    Get Directions
+  </a>
+</div>
+  </section>
 
 <!-- CONTACT FORM -->
 <section id="contact">
